Fix break url on mobile
#97

--- a/app/javascript/containers/NgoList/NgoPage.sass
+++ b/app/javascript/containers/NgoList/NgoPage.sass
@@ -78,6 +78,7 @@
     .rightSection
       flex-grow: 1
       max-width: 100%
+      word-break: break-word
 
     .infoTitle
       margin-top: 20px
